--- a/Web/packages.config
+++ b/Web/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.4.1" targetFramework="net461" />
+  <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net461" />
+  <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net461" />
   <package id="Ninject" version="3.3.4" targetFramework="net461" />
   <package id="Ninject.Extensions.Interception" version="3.3.5" targetFramework="net461" />
+  <package id="Ninject.Extensions.Interception.DynamicProxy" version="3.3.5" targetFramework="net461" />
+  <package id="Ninject.Extensions.Xml" version="3.3.0" targetFramework="net461" />
 </packages>
