--- a/Web/packages.config
+++ b/Web/packages.config
@@ -3,6 +3,7 @@
   <package id="Castle.Core" version="4.4.1" targetFramework="net461" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net461" />
   <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net461" />
